@@ -757,6 +757,10 @@ gint messageview_show(MessageView *messageview, MsgInfo *msginfo,
 	gchar *subject = NULL;
 	g_return_val_if_fail(msginfo != NULL, -1);
 
+	if (messageview->mimeview->textview &&
+	    messageview->mimeview->textview->loading)
+		return 0;
+
 	if (messageview->toolbar)
 		toolbar_set_learn_button
 			(messageview->toolbar,
